--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "canvas": "^2.11.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
@@ -16,9 +18,13 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
+    "nanoid": "^4.0.1",
     "nodemailer": "^6.9.1",
+    "pngjs": "^7.0.0",
+    "sharp": "^0.31.3",
     "uuid": "^9.0.0"
   }
 }
