--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "nodemon ./bin/www "
   },
+  "main": "./bin/www",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "canvas": "^2.11.0",
@@ -26,5 +27,10 @@
     "pngjs": "^7.0.0",
     "sharp": "^0.31.3",
     "uuid": "^9.0.0"
+  },
+  "binary": {
+    "module_name":"binding.node",
+    "module_path":"./build/Release/",
+    "host":""
   }
 }
