--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "^6.9.1",
     "pngjs": "^7.0.0",
     "sharp": "^0.31.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "socket.io": "^4.6.1"
   },
   "binary": {
     "module_name":"binding.node",
